kubernetes/infrastructure/kube-actions-runner/docker-cache-httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: docker-cache
  namespace: github-runners
spec:
  hostnames:
    - github-runner-cache.whydontyou.work
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: external-gateway
      namespace: kube-system
      sectionName: https-domain1
  rules:
    - backendRefs:
        - kind: Service
          name: docker-cache
          port: 5000
      matches:
        - path:
            type: PathPrefix
            value: /
